Swagger updates
