# docs/swagger.json
@@ -372,19 +372,19 @@
         "internal_fetch_httphandler.indexKeyResponse": {
             "type": "object",
             "properties": {
-                "indexKeys": {
-                    "type": "array",
-                    "items": {
-                        "type": "string"
-                    }
+                "indexKey": {
+                    "type": "string"
                 }
             }
         },
         "internal_fetch_httphandler.indexKeysResponse": {
             "type": "object",
             "properties": {
-                "indexKey": {
-                    "type": "string"
+                "indexKeys": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
                 }
             }
         }
